@@ -6,4 +6,5 @@ test -e /sys/devices/system/cpu/$f/cpufreq/scaling_governor && echo performance 
 done
 
 #run benchmark
-java -Xmx4G -XX:+UseConcMarkSweepGC -jar jars/anonbench-0.2.jar
+java -Xmx5G -jar heurakles-bench.jar
+done
